--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,10 @@ current: index
   <h3>經典系列鏡框</h3>
   <ul class="seriesContent">
     <li>
-      <img src="assets/images/week3-4/home-section3-1.png" alt="optical">
-      <p>OPTICAL</p>
+      <a href="optical.html">
+        <img src="assets/images/week3-4/home-section3-1.png" alt="optical">
+        <p>OPTICAL</p>
+      </a>
     </li>
     <li>
       <img src="assets/images/week3-4/home-section3-2.png" alt="SUNGLASSES">
@@ -131,7 +133,10 @@ current: index
       <label for="comment">意見反應</label>
       <textarea id="comment" placeholder="請輸入您的意見"></textarea>
       <div class="agree">
-        <input type="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+        <input id="check" type="checkbox">
+        <label for="check">
+          我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+        </label>
       </div>
       <div class="send">
         <input type="submit" value="確認送出">
