--- a/app/index.html
+++ b/app/index.html
@@ -53,8 +53,10 @@ current: index
       </a>
     </li>
     <li>
-      <img src="assets/images/week3-4/home-section3-2.png" alt="SUNGLASSES">
-      <p>SUNGLASSES</p>
+      <a href="sunglasses.html">
+        <img src="assets/images/week3-4/home-section3-2.png" alt="SUNGLASSES">
+        <p>SUNGLASSES</p>
+      </a>
     </li>
     <li>
       <img src="assets/images/week3-4/home-section3-3.png" alt="FUNCTIONAL">
