--- a/app/optical.html
+++ b/app/optical.html
@@ -6,8 +6,8 @@ current: optical
 ---
 
 <ul class="topNav">
-    <li class="optical"><a href="#">OPTICAL</a></li>
-    <li><a href="#">SUNGLASSES</a></li>
+    <li><a href="optical.html">OPTICAL</a></li>
+    <li><a href="sunglasses.html">SUNGLASSES</a></li>
     <li><a href="#">FUNCTIONAL</a></li>
 </ul>
 <ul class="opticalBanner">
