--- a/app/blog.html
+++ b/app/blog.html
@@ -9,7 +9,7 @@ current: blog
     <div class="container">
         <ul class="blogNav">
             <li><a href="#">最新消息</a></li>
-            <li><a href="#">特別企劃</a></li>
+            <li><a href="special.html">特別企劃</a></li>
             <li><a href="#">新品上市</a></li>
             <li><a href="#">鏡框小知識</a></li>
         </ul>
