--- a/app/sunglasses.html
+++ b/app/sunglasses.html
@@ -7,7 +7,7 @@ current: sunglasses
 
 <ul class="topNav">
     <li><a href="optical.html">OPTICAL</a></li>
-    <li><a href="sunglasses.html">SUNGLASSES</a></li>
+    <li><a class="navBottom" href="sunglasses.html">SUNGLASSES</a></li>
     <li><a href="#">FUNCTIONAL</a></li>
 </ul>
 <ul class="opticalBanner">
