--- a/app/optical.html
+++ b/app/optical.html
@@ -6,7 +6,7 @@ current: optical
 ---
 
 <ul class="topNav">
-    <li><a href="optical.html">OPTICAL</a></li>
+    <li><a class="navBottom" href="optical.html">OPTICAL</a></li>
     <li><a href="sunglasses.html">SUNGLASSES</a></li>
     <li><a href="#">FUNCTIONAL</a></li>
 </ul>
